--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="style/text.css">
     <link rel="stylesheet" href="style/style.css">
     <link rel="stylesheet" href="style/buttons.css">
+     <link rel="stylesheet" href="style/test.css">
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
@@ -16,14 +17,18 @@
         
         <h3>This is text style</h3>
             <div class="text-style">
-            <h1>H1 text</h1>
-            <h2>H2 text</h2>
-            <h3>H3 text</h3>
-            <h4>H4 text</h4>
-            <h5>H5 text</h5>    
-            <h6>H6 text</h6>
-            <p>P text</p>
-            <span class="disclaimer"><sup>*</sup>Рекомендованная розничная цена:</span>
+                <h1>H1 OpenSansExtraBold 90px</h1>
+                <h2>H2 OpenSansExtraBold 40px</h2>
+                <h3>H3 PTSansCaptionBold 40px</h3>
+                <h4>H4 PTSansCaptionBold 30px</h4>
+                <h5>H5 PTSansRegular 30px</h5>    
+                <h6>H6 PTSansCaption 16px</h6>
+                <p>P PTSansCaption 20px</p>
+                <p class="bold">P PTSansCaption 20px bold</p>
+                <span class="disclaimer">.disclaimer <sup>*</sup>Рекомендованная розничная цена: PTSansCaption 12px</span>
+                <div class="rotate">
+                <span class="big-text">.big-text eXtreme OpenSansExtraBold 200px</span>
+            </div>
             </div>
         </div>
     </div>
@@ -31,7 +36,8 @@
             <div class="col-lg-6 col-lg-offset-3">
                 <h3>Normal and a ghost button</h3>
             <a class="btn" href="#">Подробнее</a>
-            <a class="btn ghost" href="#">Продуктивность в играх</a>
+            <a class="btn ghost" href="#">Продуктивность в играх</a></br>
+            <a class="btn red" href="#">Купить</a>
             </div>
         </div>
         <div class="row black">
@@ -41,13 +47,16 @@
             </div>
         </div>
          <div class="row black">
-            <div class="col-lg-6 col-lg-offset-3">
+            <div class="col-lg-3 col-lg-offset-3">
                 <h3>Text link</h3>
             <a class="text-link" href="#">Найти СЦ</a>
             <a class="text-link" href="#">Купить</a>
             </div>
+            <div class="col-lg-3">
+                <h3>Secondary link</h3>
+            <a class="text-link text-small" href="#">Смотреть фото</a>
+            </div>
         </div>
-    
 </div>
 </body>
 </html>
