--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <h2>H2 OpenSansExtraBold 40px</h2>
                 <h3>H3 PTSansCaptionBold 40px</h3>
                 <h4>H4 PTSansCaptionBold 30px</h4>
-                <h5>H5 PTSansRegular 30px</h5>    
+                <h5>H5 PTSansBold 30px</h5>    
                 <h6>H6 PTSansCaption 16px</h6>
                 <p>P PTSansCaption 20px</p>
                 <p class="bold">P PTSansCaption 20px bold</p>
