Продуктивность на производительность поменял

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <div class="col-lg-6 col-lg-offset-3">
                 <h3>Normal and a ghost button</h3>
             <a class="btn" href="#">Подробнее</a>
-            <a class="btn ghost" href="#">Продуктивность в играх</a></br>
+            <a class="btn ghost" href="#">Производительность в играх</a></br>
             <a class="btn red" href="#">Купить</a>
             </div>
         </div>
